Alteração na chamada da avaliação

--- a/src/main/resources/templates/Avaliacao/Avaliacao.html
+++ b/src/main/resources/templates/Avaliacao/Avaliacao.html
@@ -1,4 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head th:replace="Fragments/header :: header"></head>
 <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -11,15 +12,15 @@
     .row {
         padding: 5px;
     }
-    
+
     .col {
         margin: 5px;
     }
-    
+
     .card-header {
         margin: 0 -30;
     }
-    
+
     img {
         max-width: 150px;
         max-height: 100px;
@@ -40,7 +41,7 @@
                 <div th:replace="Fragments/logout :: logout"></div>
 
                 <div class="container-fluid">
-                    
+
                     <th:block th:each="aluno : ${aluno}">
                         <div class="row">
                             <div class="col-xl-3 col-md-6 mb-4">
@@ -48,8 +49,10 @@
                                     <div class="card-body">
                                         <div class="row no-gutters align-items-center">
                                             <div class="col mr-2">
-                                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Aluno</div>
-                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span th:text="${aluno.nome}"></span></div>
+                                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                                    Aluno</div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span
+                                                        th:text="${aluno.nome}"></span></div>
                                             </div>
                                             <div class="col-auto">
                                                 <i class="fas fa-user fa-2x text-gray-300"></i>
@@ -58,52 +61,57 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <div class="col-xl-3 col-md-6 mb-4">
                                 <div class="card border-left-success shadow h-100 py-2">
                                     <div class="card-body">
                                         <div class="row no-gutters align-items-center">
                                             <div class="col mr-2">
-                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Data de Nascimento</div>
-                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span th:text="${aluno.dataNascimento}"></span></div>
+                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                    Data de Nascimento</div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span
+                                                        th:text="${aluno.dataNascimento}"></span></div>
                                             </div>
                                             <div class="col-auto">
-                                               <i class="fas fa-birthday-cake fa-2x text-gray-300"></i>
+                                                <i class="fas fa-birthday-cake fa-2x text-gray-300"></i>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <div class="col-xl-3 col-md-6 mb-4">
                                 <div class="card border-left-success shadow h-100 py-2">
                                     <div class="card-body">
                                         <div class="row no-gutters align-items-center">
                                             <div class="col mr-2">
-                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Sexo</div>
+                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                    Sexo</div>
                                                 <div class="h5 mb-0 font-weight-bold text-gray-800">
-                                                
-                                                            <span th:if="${aluno.sexo =='1'}">MASCULINO</span>
-                                                            <span th:unless="${aluno.sexo == '2'}">FEMININO</span>
+
+                                                    <span th:if="${aluno.sexo =='1'}">MASCULINO</span>
+                                                    <span th:unless="${aluno.sexo == '2'}">FEMININO</span>
                                                 </div>
                                             </div>
                                             <div class="col-auto">
                                                 <i class="fas fa-venus-mars fa-2x text-gray-300"></i>
 
-                                            
+
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <div class="col-xl-3 col-md-6 mb-4">
                                 <div class="card border-left-success shadow h-100 py-2">
                                     <div class="card-body">
                                         <div class="row no-gutters align-items-center">
                                             <div class="col mr-2">
-                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Ultima Avaliação</div>
-                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span th:text="${aluno.ultimaAvaliacao}"></span></div>
+                                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                    Ultima Avaliação</div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800"><span
+                                                        th:text="${aluno.ultimaAvaliacao}"></span></div>
                                             </div>
                                             <div class="col-auto">
                                                 <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -113,23 +121,23 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                     </th:block>
-                        
-                    <hr/>
+
+                    <hr />
 
                     <div class="row">
                         <div class="card shadow mb-4 col">
-                            
+
                             <div class="container-fluid">
-                                    <div class="card-header">
-                                            <center>Histórico</center>
-                                        </div>
+                                <div class="card-header">
+                                    <center>Histórico</center>
+                                </div>
                                 <div id="lineChart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
                             </div>
                         </div>
                     </div>
-                    <hr/>
+                    <hr />
 
                     <div class="row">
                         <div class="card shadow mb-4 col chart1">
@@ -144,22 +152,24 @@
                             </div>
                         </div>
                     </div>
-                    <hr/>
+                    <hr />
                     <div class="row">
-                    <div class="card col shadow mb-4 chart2">
+                        <div class="card col shadow mb-4 chart2">
                             <div class="container-fluid">
-                                    <table class="table table-bordered table-striped table-hover" id="dataTable" width="100%" cellspacing="0">
-                                            <thead>
-                                                    <tr>
-                                                        <th>DATA DA AVALIAÇÃO</th>
-                                                        <th>MASSA</th>
-                                                        <th>MASSA DE GORDURA</th>
-                                                        <th>MASSA MAGRA</th>
-                                                        <th>IMC</th>
-                                                        <th>PGGG</th>
-                                                    </tr>
-                                                </thead>
-                                    </table>
+                                <table class="table table-bordered table-striped table-hover" id="dataTable"
+                                    width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th style="width: 15%;">DATA DA AVALIAÇÃO</th>
+                                            <th style="width: 14%;">MASSA</th>
+                                            <th style="width: 14%;">MASSA DE GORDURA</th>
+                                            <th style="width: 14%;">MASSA MAGRA</th>
+                                            <th style="width: 14%;">IMC</th>
+                                            <th style="width: 14%;">PGGG</th>
+                                            <th style="width: 10%;">Ações</th>
+                                        </tr>
+                                    </thead>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -169,14 +179,15 @@
     </div>
 </body>
 
-        <footer th:replace="Fragments/footer :: footer"></footer>
-        <script th:inline="javascript">
-            /*<![CDATA[*/
-            var objeto = [[${avaliacoes}]];
+<footer th:replace="Fragments/footer :: footer"></footer>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var objeto = [[${ avaliacoes }]];
             /*]]>*/
-        </script>
-        <script th:src="@{/js/Graficos/DashboardAluno.js}">
-            var data = JSON.parse(objeto)
-        </script>
-        <script th:src="@{/js/Tabelas/TableDashboardAluno.js}"></script>            
+</script>
+<script th:src="@{/js/Graficos/DashboardAluno.js}">
+    var data = JSON.parse(objeto)
+</script>
+<script th:src="@{/js/Tabelas/TableDashboardAluno.js}"></script>
+
 </html>
