--- a/src/main/resources/templates/Aluno/ListAluno.html
+++ b/src/main/resources/templates/Aluno/ListAluno.html
@@ -24,7 +24,7 @@
 
 <body id="page-top">
 
-    <!--<div th:replace="Fragments/logout :: logout"></div>-->
+    <div th:replace="Fragments/logout :: logout"></div>
     <!-- INCLUI SISTEMA SUPERIOR DE LOGOUT -->
 
     <div id="wrapper">
@@ -76,7 +76,7 @@
                                             <td class="column4"><span th:text="${alunos.email}"> </span></td>
                                             <td class="column5"><span th:text="${alunos.cpf}"> </span></td>
                                             <td>
-                                                <a class="btn btn-outline-primary fas fas fa-address-book" th:href="@{|/avaliacao/${alunos.id}|}" role="button"></a>
+                                                <a class="btn btn-outline-primary fas fas fa-address-book" th:href="@{|/avaliacao/${alunos.id}?avaliacao=1|}" role="button"></a>
                                                 <a class="btn btn-outline-secondary fas fa-edit" th:href="@{|/edita/${alunos.id}|}"></a>
                                                 <button class="btn btn-outline-danger  Button fas fa-trash-alt" th:attr="value=${alunos.id}"></button>
                                             </td>
