--- a/src/main/resources/templates/Fragments/footer.html
+++ b/src/main/resources/templates/Fragments/footer.html
@@ -10,4 +10,5 @@
 
     <!-- Page level custom scripts -->
     <script th:src="@{/js/demo/datatables-demo.js}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
 </footer>
